Add some translations

--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -3,33 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-30 17:21+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/spring-boot-properties.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Accessing application properties with Spring Boot properties API"
 msgstr "Quarkus - Spring BootプロパティーAPIを使用したアプリケーションプロパティーへのアクセス"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:13
-#, fuzzy
 msgid "If you prefer to use Spring Boot `@ConfigurationProperties` annotated class to access application properties instead of a Quarkus native `@ConfigProperties` or a MicroProfile `@ConfigProperty` approach, you can do that with this extension."
-msgstr "Quarkusネイティブ `@ConfigProperties` や MicroProfile `@ConfigProperty` のアプローチではなく、Spring Boot `@ConfigurationProperties` 注釈付きクラスを使用してアプリケーションのプロパティーにアクセスしたい場合は、このエクステンションを使用することができます。"
+msgstr "Quarkusネイティブの `@ConfigProperties` や MicroProfile `@ConfigProperty` のアプローチではなく、Spring Boot `@ConfigurationProperties` アノテーションクラスを使用してアプリケーションのプロパティーにアクセスしたい場合は、このエクステンションを使用することができます。"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:16
@@ -143,15 +142,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:69
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "GreetingController"
-msgstr "グリーティングコントローラ"
+msgstr "GreetingController"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:73
-#, fuzzy
 msgid "The Quarkus Maven plugin automatically generated a `GreetingResource` JAX-RS resource in the `src/main/java/org/acme/spring/boot/properties/GreetingResource.java` file that looks like:"
-msgstr "Quarkus Mavenプラグインは、 `src/main/java/org/acme/spring/boot/properties/GreetingResource.java` ファイル内の `GreetingResource` JAX-RSリソースを自動的に生成して、次のように表示します。"
+msgstr "Quarkus Mavenプラグインは、 `src/main/java/org/acme/spring/boot/properties/GreetingResource.java` ファイルに以下のような `GreetingResource` JAX-RSリソースを自動的に生成します。"
 
 #. type: delimited block -
 #: upstream/_guides/spring-boot-properties.adoc:77
@@ -211,7 +209,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:94
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Injecting properties"
 msgstr "プロパティーの注入"
 
@@ -319,9 +317,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:148
-#, fuzzy
 msgid "Run the tests to verify that application still functions correctly."
-msgstr "テストを実行して、アプリケーションが正常に機能していることを確認します。"
+msgstr "テストを実行して、アプリケーションがまだ正常に機能していることを確認します。"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:149
@@ -337,19 +334,17 @@ msgstr "アプリケーションを実行するには、次の手順を実行し
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:155
-#, fuzzy
 msgid "Changing the configuration file is immediately reflected."
 msgstr "設定ファイルの変更はすぐに反映されます。"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:158
-#, fuzzy
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `target/quarkus-app/quarkus-run.jar` file.  You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` ."
+msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `target/quarkus-app/quarkus-run.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` でネイティブ実行ファイルを生成することも出来ます。"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:159
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Default values"
 msgstr "デフォルト値"
 
@@ -367,7 +362,6 @@ msgstr "デフォルト値を持つプロパティーは、他のプロパティ
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:168
-#, fuzzy
 msgid "Go ahead and add the new field to the `GreetingProperties` class:"
 msgstr "`GreetingProperties` クラスに新しいフィールドを追加してください。"
 
@@ -389,9 +383,8 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:185
 #: upstream/_guides/spring-boot-properties.adoc:264
-#, fuzzy
 msgid "And update the `GreetingResource` and its test `GreetingResourceTest`:"
-msgstr "そして、 `GreetingResource` とそのテストを更新します `GreetingResourceTest` ."
+msgstr "そして、 `GreetingResource` とそのテスト `GreetingResourceTest` を更新します。"
 
 #. type: delimited block -
 #: upstream/_guides/spring-boot-properties.adoc:208
@@ -450,7 +443,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:235
 #: upstream/_guides/spring-boot-properties.adoc:314
-#, fuzzy
 msgid "Run the tests to verify the change."
 msgstr "テストを実行して変更を確認します。"
 
@@ -522,7 +514,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:315
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Grouping properties"
 msgstr "プロパティーのグループ化"
 
@@ -605,60 +597,51 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:383
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "More Spring guides"
-msgstr "その他のスプリングガイド"
+msgstr "その他のSpringガイド"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:386
-#, fuzzy
 msgid "Quarkus has more Spring compatibility features. See the following guides for more details:"
 msgstr "Quarkusには、より多くのSpring互換機能があります。詳細については、以下のガイドを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:388
-#, fuzzy
 msgid "link:spring-di[Quarkus - Extension for Spring DI]"
 msgstr "link:spring-di[Quarkus - Spring DIのためのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:389
-#, fuzzy
 msgid "link:spring-web[Quarkus - Extension for Spring Web]"
-msgstr "link:spring-web[Quarkus - Spring Web用のエクステンション]"
+msgstr "link:spring-web[Quarkus - Spring Webのためのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:390
-#, fuzzy
 msgid "link:spring-data-jpa[Quarkus - Extension for Spring Data JPA]"
-msgstr "link:spring-data-jpa[Quarkus - Spring Data JPAのエクステンション]"
+msgstr "link:spring-data-jpa[Quarkus - Spring Data JPAのためのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:391
-#, fuzzy
 msgid "link:spring-data-rest[Quarkus - Extension for Spring Data REST]"
-msgstr "link:spring-data-rest[Quarkus - Spring Data RESTのエクステンション]"
+msgstr "link:spring-data-rest[Quarkus - Spring Data RESTのためのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:392
-#, fuzzy
 msgid "link:spring-security[Quarkus - Extension for Spring Security]"
 msgstr "link:spring-security[Quarkus - Spring Securityのためのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:393
-#, fuzzy
 msgid "link:spring-cloud-config-client[Quarkus - Reading properties from Spring Cloud Config Server]"
 msgstr "link:spring-cloud-config-client[Quarkus - Spring Cloud Config Serverからプロパティーを読み込む]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:394
-#, fuzzy
 msgid "link:spring-cache[Quarkus - Extension for Spring Cache]"
-msgstr "link:spring-cache[Quarkus - Spring Cacheのエクステンション]"
+msgstr "link:spring-cache[Quarkus - Spring Cacheのためのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:394
-#, fuzzy
 msgid "link:spring-scheduled[Quarkus - Extension for Spring Scheduled]"
 msgstr "link:spring-scheduled[Quarkus - Spring Scheduledのためのエクステンション]"
