Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-client.adoc.po
@@ -53,18 +53,19 @@ msgstr "OidcClient"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:20
+#, fuzzy
 msgid "`quarkus-oidc-client` extension provides a reactive `io.quarkus.oidc.client.OidcClient` which can be used to acquire and refresh tokens using Smallrye Mutiny `Uni` and `Vert.x WebClient`."
-msgstr ""
+msgstr "`quarkus-oidc-client` エクステンションは、SmallRye Mutiny `Uni` および `Vert.xWebClient` を使用してトークンを取得および更新するために使用できるリアクティブな `io.quarkus.oidc.client.OidcClient` を提供します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:22
 msgid "`OidcClient` is initialized at the build time with the IDP token endpoint URL which can be auto-discovered or manually configured and uses this endpoint to acquire access tokens using `client_credentials` or `password` token grants and refresh the tokens using `refresh_token` grant."
-msgstr ""
+msgstr "`OidcClient` は自動検出または手動で構成することができる IDP トークンのエンドポイント URL でビルド時に初期化され、このエンドポイントを使用して `client_credentials` または `password` トークングラントを使用してアクセストークンを取得し、 `refresh_token` グラントを使用してトークンを更新します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:24
 msgid "Here is how `OidcClient` can be configured to use the `client_credentials` grant:"
-msgstr ""
+msgstr "`OidcClient` が `client_credentials` グラントを使用するように設定する方法は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:30
@@ -180,12 +181,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:84
 msgid "`quarkus-oidc-client-filter` extension provides `io.quarkus.oidc.client.filter.OidcClientRequestFilter` JAX-RS ClientRequestFilter which uses `OidcClient` to acquire the access token, refresh it if needed, and set it as an HTTP `Authorization` `Bearer` scheme value."
-msgstr ""
+msgstr "`quarkus-oidc-client-filter` エクステンションは `io.quarkus.oidc.client.filter.OidcClientRequestFilter` JAX-RS ClientRequestFilter を提供します。このフィルターは、`OidcClient` を使用してアクセストークンを取得し、必要に応じて更新し、HTTP `Authorization` `Bearer` スキーム値として設定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:86
+#, fuzzy
 msgid "By default this filter will get `OidcClient` to acquire the first pair of access and refresh tokens at its initialization time. If the access tokens are short lived and refresh tokens are not available then the token acquisition should be delayed with `quarkus.oidc-client.early-tokens-acquisition=false`."
-msgstr ""
+msgstr "デフォルトでは、このフィルタは初期化時に `OidcClient` を取得してアクセストークンとリフレッシュトークンの最初のペアを取得します。アクセストークンが短命でリフレッシュトークンが利用できない場合は、`quarkus.oidc-client.early-tokens-acquisition=false` でトークンの取得を遅延させるべきです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:88
@@ -234,7 +236,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:121
 msgid "Alternatively, `OidcClientRequestFilter` can be registered automatically with all MP Rest or JAX-RS clients if `quarkus.oidc-client-filter.register-filter=true` property is set."
-msgstr ""
+msgstr "または、 `quarkus.oidc-client-filter.register-filter=true` プロパティーが設定されている場合、すべての MP Rest または JAX-RS クライアントで `OidcClientRequestFilter` を自動的に登録することができます。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:122
@@ -288,7 +290,7 @@ msgstr "`Tokens` プロデューサーがトークンを取得して更新し、
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:145
 msgid "See also the previous section about delaying the token acquisition in some cases."
-msgstr ""
+msgstr "トークンの取得を遅らせる場合があることについては、前のセクションも参照してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:146
@@ -299,7 +301,7 @@ msgstr "OidcClients"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:149
 msgid "`io.quarkus.oidc.client.OidcClients` is a container of `OidcClient`s - it includes a default `OidcClient` (which can also be injected directly as described above) and named clients which can be configured like this:"
-msgstr ""
+msgstr "`io.quarkus.oidc.client.OidcClients` は、 `OidcClient` のコンテナです。デフォルトの `OidcClient` (上記のように直接注入することも可能です) と名前付きクライアントを含み、このように設定することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:152
@@ -521,7 +523,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:307
 msgid "You can selectively register `AccessTokenRequestFilter` by using either `io.quarkus.oidc.token.propagation.AccessToken` or `org.eclipse.microprofile.rest.client.annotation.RegisterProvider`, for example:"
-msgstr ""
+msgstr "`io.quarkus.oidc.token.propagation.AccessToken` または `org.eclipse.microprofile.rest.client.annotation.RegisterProvider` のいずれかを使用して、 `AccessTokenRequestFilter` を選択的に登録できます。例:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:311
