Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/quartz.adoc.po
@@ -336,7 +336,7 @@ msgstr "現在の開始時刻で新しい `Task` を作成します。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quartz.adoc:149
 msgid "Persist the task in database using link:hibernate-orm-panache[Panache]."
-msgstr ""
+msgstr "link:hibernate-orm-panache[Panache] を使用してデータベースにタスクを永続化します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/quartz.adoc:150
