--- a/l10n/po/ja_JP/_versions/1.7/guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute.adoc.po
@@ -730,7 +730,7 @@ msgstr "テンプレートはシンプルです:"
 #: upstream/_versions/1.7/guides/qute.adoc:414
 #, no-wrap
 msgid "report.html"
-msgstr ""
+msgstr "report.html"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute.adoc:437
