--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-cloud-config-client.adoc.po
@@ -333,4 +333,4 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-cloud-config-client.adoc:160
 #, no-wrap
 msgid "Spring Cloud Config Client Reference"
-msgstr ""
+msgstr "Spring Cloud Config Client Reference"
