Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc.po, 0, 23, 0, 245 ,100%
 l10n/po/ja_JP/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc.po, 0, 15, 0, 150 ,100%
 l10n/po/ja_JP/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc.po, 0, 43, 0, 755 ,100%
 l10n/po/ja_JP/_posts/2021-04-20-solving-problems-with-custom-extensions.adoc.po, 0, 67, 0, 1185 ,100%
