--- a/l10n/po/ja_JP/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-06 12:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-07 09:13+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.Alpha2 released - Continuous Testing improvements'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.0.0.Alpha2リリース - 継続的なテストの改善'\n"
+"title: 'Quarkus 2.0.0.Alpha2リリース - 継続的テストの改善'\n"
 "date: 2021-05-06\n"
 "tags: release\n"
 "synopsis: コミュニティからのフィードバックにより、この新しいAlpha版では、特に継続的テストのための多くのバグ修正と改善が行われています。\n"
@@ -44,25 +44,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:11
-#, fuzzy
 msgid "We just released our second Alpha for Quarkus 2.0."
 msgstr "Quarkus 2.0の2回目のアルファ版をリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:13
-#, fuzzy
 msgid "We had a lot of feedback and Continuous Testing got a lot of fixes and improvements."
-msgstr "多くのフィードバックがあり、Continuous Testingでは多くの修正や改善が行われました。"
+msgstr "多くのフィードバックがあり、継続的テストでは多くの修正や改善が行われました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:15
-#, fuzzy
 msgid "Please keep the feedback coming!"
 msgstr "引き続き、ご意見をお寄せください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:17
-#, fuzzy
 msgid "If you have missed our Alpha1 announcement: here are link:/blog/quarkus-2-0-0-alpha1-released/[the main new features of Quarkus 2.0]."
 msgstr "Alpha1の発表を見逃した方のために、 link:/blog/quarkus-2-0-0-alpha1-released/[Quarkus 2.0の主な新機能]をご紹介します。"
 
@@ -102,13 +98,11 @@ msgstr "継続的テスト"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:32
-#, fuzzy
 msgid "The most visible being a far improvement integration in the Dev UI."
-msgstr "最も顕著なのは、開発UIの統合が大幅に改善されたことです。"
+msgstr "最も顕著な変更は、Dev UIの統合が大幅に改善されたことです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:34
-#, fuzzy
 msgid "Another notable one is the addition of `quarkus.test.type` which can be used to define which tests are run in continuous testing, `unit`, `quarkus-test` or `all`."
 msgstr "もう1つの注目すべき点は、 `quarkus.test.type` が追加されたことです。これは、継続的テストで実行するテストを `unit` 、 `quarkus-test` 、 `all` のいずれかに定義するために使用されます。"
 
@@ -120,7 +114,6 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc:38
-#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha2[2.0.0.Alpha2] on GitHub."
 msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha2[2.0.0.Alpha2]の完全な変更履歴はGitHubに掲載されています。"
 
