--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-05-09 02:47+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -828,7 +828,9 @@ msgstr "時には、命令的な方法でメッセージを送ることが必要
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:358
-msgid "For example, if you need to send a message to a stream, from inside a REST endpoint, when receiving a POST request.  In this case, you cannot use `@Output` because your method has parameters."
+#, fuzzy
+#| msgid "For example, if you need to send a message to a stream, from inside a REST endpoint, when receiving a POST request.  In this case, you cannot use `@Output` because your method has parameters."
+msgid "For example, if you need to send a message to a stream, from inside a REST endpoint, when receiving a POST request.  In this case, you cannot use `@Outgoing` because your method has parameters."
 msgstr "例えば、POST リクエストを受信したときに、REST エンドポイントの内部からストリームにメッセージを送信する必要があるとします。この場合、メソッドにはパラメーターがあるため、`@Output` を使用することはできません。"
 
 #. type: Plain text
