Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -252,7 +252,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27139
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:11
@@ -479,7 +479,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27141
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:16
@@ -1532,7 +1532,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27365
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22
@@ -2090,7 +2090,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27337
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:34
@@ -2407,7 +2407,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27340
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:36
@@ -2605,7 +2605,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27313
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:53
@@ -2645,7 +2645,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8368
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:72
@@ -2964,7 +2964,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27346
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:99
@@ -5247,7 +5247,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27115
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:1016
@@ -11741,7 +11741,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:6120
 #, no-wrap
 msgid "double"
-msgstr ""
+msgstr "double"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:6092
@@ -12998,7 +12998,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:7304
 #, no-wrap
 msgid "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
-msgstr ""
+msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:6977
@@ -13190,7 +13190,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:7090
 #, no-wrap
 msgid "`binary`"
-msgstr ""
+msgstr "`binary`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:7095
@@ -14761,7 +14761,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8162
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8167
@@ -14913,7 +14913,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27295
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8241
@@ -15903,7 +15903,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8879
 #, no-wrap
 msgid "`X-Forwarded-Host`"
-msgstr ""
+msgstr "`X-Forwarded-Host`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8884
@@ -15933,7 +15933,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8897
 #, no-wrap
 msgid "`X-Forwarded-Prefix`"
-msgstr ""
+msgstr "`X-Forwarded-Prefix`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8902
@@ -35091,7 +35091,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22753
 #, no-wrap
 msgid "`io.quarkus`"
-msgstr ""
+msgstr "`io.quarkus`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22758
@@ -35109,7 +35109,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22762
 #, no-wrap
 msgid "`quarkus-universe-bom`"
-msgstr ""
+msgstr "`quarkus-universe-bom`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22767
@@ -35457,7 +35457,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22987
 #, no-wrap
 msgid "float"
-msgstr ""
+msgstr "float"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:22990
@@ -37566,7 +37566,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:24473
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:24442
@@ -41736,12 +41736,12 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27375
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
-msgstr ""
+msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27379
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
-msgstr ""
+msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
 #. type: Block title
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:27384
