--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-11 02:54+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,7 +53,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:17
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:54
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -72,13 +72,33 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:26
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:53
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:63
 #, no-wrap
 msgid "string"
 msgstr "string"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:34
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:35
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.devservices.port]]`link:#quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.devservices.port[quarkus.datasource.devservices.port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Optional fixed port the dev service will listen to. \n"
+" If not defined, the port will be chosen randomly.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:36
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:82
+#, no-wrap
+msgid "int"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:44
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.devservices.properties-properties]]`link:#quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.devservices.properties-properties[quarkus.datasource.devservices.properties]`\n"
@@ -90,14 +110,14 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:35
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:62
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:45
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:72
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:43
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:53
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices]]`link:#quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices[quarkus.datasource.\"datasource-name\".devservices]`\n"
@@ -109,7 +129,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:52
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:62
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices.image-name]]`link:#quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices.image-name[quarkus.datasource.\"datasource-name\".devservices.image-name]`\n"
@@ -121,7 +141,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:61
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:71
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices.properties-properties]]`link:#quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices.properties-properties[quarkus.datasource.\"datasource-name\".devservices.properties]`\n"
@@ -129,5 +149,18 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Generic properties that are added to the database connection URL.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:81
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices.port]]`link:#quarkus-datasource-config-group-dev-services-build-time-config_quarkus.datasource.-datasource-name-.devservices.port[quarkus.datasource.\"datasource-name\".devservices.port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Optional fixed port the dev service will listen to. \n"
+" If not defined, the port will be chosen randomly.\n"
 "--"
 msgstr ""
