--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-11 02:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -74,3 +74,22 @@ msgstr ""
 #, no-wrap
 msgid "string"
 msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:35
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-mongodb-config-group-dev-services-build-time-config_quarkus.mongodb.devservices.port]]`link:#quarkus-mongodb-config-group-dev-services-build-time-config_quarkus.mongodb.devservices.port[quarkus.mongodb.devservices.port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Optional fixed port the dev service will listen to. \n"
+" If not defined, the port will be chosen randomly.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:36
+#, no-wrap
+msgid "int"
+msgstr ""
