Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-general-config-items.adoc.po
@@ -123,7 +123,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-general-config-items.adoc:162
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-general-config-items.adoc:54
