--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
@@ -158,4 +158,4 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc:72
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
