--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc.po
@@ -57,14 +57,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:173
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:21
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:176
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:26
