--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc.po
@@ -97,7 +97,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:65
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:45
@@ -117,7 +117,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:75
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:55
