--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-data-source-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-data-source-build-time-config.adoc.po
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-build-time-config.adoc:115
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-build-time-config.adoc:54
