--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc.po
@@ -95,7 +95,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:82
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-dev-services-build-time-config.adoc:44
