--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc.po
@@ -115,7 +115,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:136
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:54
