--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource.adoc.po
@@ -125,7 +125,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource.adoc:183
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource.adoc:54
