--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-11 02:53+0000\n"
+"POT-Creation-Date: 2021-05-12 03:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2508,7 +2508,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-build-items.adoc:768
 #, no-wrap
-msgid "https://github.com/quarkusio/quarkus/blob/main/extensions/grpc/deployment/src/main/java/io/quarkus/grpc/deployment/GrpcServiceBuildItem.java[`io.quarkus.grpc.deployment.GrpcServiceBuildItem`, window=\"_blank\"] :: +++<i>No Javadoc found</i>+++"
+msgid "https://github.com/quarkusio/quarkus/blob/main/extensions/grpc/deployment/src/main/java/io/quarkus/grpc/deployment/GrpcClientBuildItem.java[`io.quarkus.grpc.deployment.GrpcClientBuildItem`, window=\"_blank\"] :: +++<i>No Javadoc found</i>+++"
 msgstr ""
 
 #. type: Table
@@ -2516,7 +2516,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "`String name` :: +++<i>No Javadoc found</i>+++\n"
-"`Set stubClasses` :: +++<i>No Javadoc found</i>+++"
+"`Set stubs` :: +++<i>No Javadoc found</i>+++"
 msgstr ""
 
 #. type: Title ==
